syntax = "proto3";

option csharp_namespace = "ChatProtos";

package gateway;

import "google/protobuf/empty.proto";

service Gateway {	
	rpc InvokeAction (ClientRequest) returns (ClientResponse);
	rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
}

message ClientRequest {
	string name = 1;
	string action = 2;
}

message ClientResponse {
	Status status = 1;

	enum Status {
		SUCCESS = 0;
		ERROR = 1;
	}
}

message SendMessageRequest {
	string name = 1;
	string message = 2;
}